fix(backend): Corrección en nombres de archivos para estandarizar nombres de dtos con .response.dto.ts y .request.dto.ts y adición del decorador @Body() en el endpoint actividadId-bulk
